# RobotRacing2018

./: .gitignore  Coding Standards.txt  How_to_run.md  README.md  RVIZConfig.rviz  SETUP UDEV RULES.md  Summary_of_2018(AfterCompetition).md  callbacks_clean.ino  endline_detection.m  mapping.rviz  notes.c  prerace_checks.md  rr_arduino_cleanup.ino  simulation.rviz
darknet_ros/traffic_light_detection/: CMakeLists.txt  package.xml
darknet_ros/traffic_light_detection/launch/: traffic_light_detector.launch
darknet_ros/traffic_light_detection/src/: main.cpp  traffic_light_detector.cpp
rr_2018/: CMakeLists.txt  package.xml
rr_common/: CMakeLists.txt  package.xml
rr_common/include/: msg_srv_names.hpp
rr_common/scripts/: record_bag.sh
rr_controller/: CMakeLists.txt  package.xml
rr_controller/include/: controller.h
rr_controller/launch/: controller.launch  controller.yaml  pid.launch
rr_controller/src/: controller.cpp  main.cpp
rr_description/: CMakeLists.txt  package.xml
rr_description/launch/: rr_vehicle.launch  rr_vehicle_plain.launch  rviz.launch
rr_description/urdf/: augmented_rc_car.urdf.xacro  circuit_race.world  drag_race.world  oval_race.world
rr_description/urdf/assets/: CircuitRaceTrack.dae  DragRaceTrack.dae  OvalRaceTrack.dae  RR2018.stl  dragRaceTrack.dae
rr_endline_detection/: CMakeLists.txt  package.xml
rr_endline_detection/include/: endline_detection.hpp
rr_endline_detection/launch/: endline_node.launch  rr_endline_detection.yaml  webcam_test.launch
rr_endline_detection/src/: endline_detection.cpp  main.cpp
rr_gazebo/: CMakeLists.txt  README.md  package.xml
rr_gazebo/config/: ctrlr_params.yaml
rr_gazebo/include/: simulated_odom.hpp
rr_gazebo/launch/: rr_circuit_race_sim.launch  rr_drag_race_sim.launch  rr_drag_race_world.launch  rr_oval_race_sim.launch  rr_start_gazebo.launch  rr_vehicle.launch  rr_vehicle_teleop.launch
rr_gazebo/scripts/: ackermann_controller.py  vehicle_joystick.py
rr_gazebo/src/: simulated_odom.cpp  simulated_odom_node.cpp
rr_lane_detection/: CMakeLists.txt  package.xml
rr_lane_detection/config/: sim_vision_params_left.yaml  sim_vision_params_right.yaml  vision_params_left.yaml  vision_params_right.yaml
rr_lane_detection/include/: lane_detection_processor.hpp  shadow_removal.hpp  thresholding.hpp
rr_lane_detection/launch/: dual_cam_lane_detection.launch  lane_detection_cam.launch  lane_detection_left_cam.launch  lane_detection_right_cam.launch  sim_dual_cam_lane_detection.launch  vision_params_left.yaml  vision_params_right.yaml
rr_lane_detection/src/: lane_detection.cpp  lane_detection_processor.cpp  shadow_removal.cpp  thresholding.cpp
rr_mapper/: CMakeLists.txt  package.xml
rr_mapper/config/: rr_mapper.yaml  rr_mapper_sim.yaml
rr_mapper/include/: LaserMapper.h  laser_mapper.hpp  occupancy_grid_utils.hpp
rr_mapper/launch/: mapper.launch  mapper_sim.launch  rr_mapper.yaml  rr_mapper_sim.yaml
rr_mapper/launch/parameters/: rr_mapper.yaml
rr_mapper/src/: LOGO.cpp  LaserMapper.cpp  OccupancyGridUtils.cpp  laser_mapper.cpp  main.cpp  occupancy_grid_utils.cpp
rr_old_code/robot_racing_2014_cv/: CMakeLists.txt  package.xml
rr_old_code/robot_racing_2014_cv/launch/: robot_racing_circuit_race.launch  robot_racing_drag_race.launch
rr_old_code/robot_racing_2014_cv/src/: circuit_race_cv.cpp  drag_race_cv.cpp  robot_racing_cv.cpp  robot_racing_cv.hpp
rr_old_code/rr_controller/: CMakeLists.txt  package.xml
rr_old_code/rr_controller/launch/: Drag_race.yaml  robotracing_dragrace_launch.launch  robotracing_lat_launch.launch  robotracing_pid_launch.launch
rr_old_code/rr_controller/src/: robotracing_long_control.cpp  robotracing_pid_control.cpp  rr_controller.cpp
rr_path_planner/: CMakeLists.txt  package.xml
rr_path_planner/config/: circuit_race.yaml  drag_race.yaml
rr_path_planner/include/: OccupancyGridUtils.h  PathPlanner.h  PathPlanner2k16.h  path_planner.h
rr_path_planner/launch/: circuit_race.launch  circuit_race.yaml  circuit_race_planner.launch  drag_race.launch  drag_race.yaml  drag_race_planner.launch  drag_race_planner_sim.launch  trajectory_rollout.launch
rr_path_planner/launch/archive/: Trajectory_rollout.tmp  Trajectory_rollout.traj.yaml  Trajectory_rollout.yaml  Trajectory_rollout.yaml.back  Trajectory_rollout_even_better.yaml  Trajectory_rollout_indoor_circuit.yaml  (+7 more)
rr_path_planner/src/: PathPlanner.cpp  PathPlanner2k16.cpp  main.cpp  path_planner.cpp
rr_supervisor/: CMakeLists.txt  README.md  package.xml
rr_supervisor/include/: EnableCatcher.h  rr_supervisor.h  supervisor.hpp
rr_supervisor/launch/: robotracing_circuit.launch  robotracing_drag.launch  supervisor.launch
rr_supervisor/src/: main.cpp  rr_supervisor.cpp  supervisor.cpp
rr_traffic_light/: CMakeLists.txt  package.xml  run_instructions.txt
rr_traffic_light/include/: rr_traffic_light.hpp
rr_traffic_light/launch/: rr_traffic_light.launch  rr_traffic_light.yaml  rr_trafficlight.launch  traff_param.yaml  traffic_light_camera.launch
rr_traffic_light/scripts/: camera_parameters_tl.sh
rr_traffic_light/src/: main.cpp  rr_traffic_light.cpp
rr_vehicle_gazebo/: CMakeLists.txt  README.md  package.xml
rr_vehicle_gazebo/config/: ctrlr_params.yaml  em_3905_ackermann_ctrlr_params.yaml  em_3905_joint_ctrlr_params.yaml  joint_ctrlr_params.yaml
rr_vehicle_gazebo/include/: simulated_odom.hpp
rr_vehicle_gazebo/launch/: rr_vehicle.launch  rr_vehicle_both.launch  rr_vehicle_rqt.launch  rr_vehicle_teleop.launch
rr_vehicle_gazebo/nodes/: ackermann_controller.py
rr_vehicle_gazebo/scripts/: ackermann_controller.py  connect_controller.sh  vehicle_joystick.py
rr_vehicle_gazebo/src/: simulated_odom.cpp
vis/: CMakeLists.txt  package.xml
vis/include/: vision_fun_2015.hpp  visionprocessor.hpp
vis/launch/: Odual_cam_vis_rbag.launch  dual_cam_vis.launch  vis.launch  vis_left.launch  vis_left_oldbag.launch  vis_right.launch  vis_right_oldbag.launch  vision_params.yaml  vision_params_left.yaml  vision_params_right.yaml
vis/src/: camera_parameters.sh  lineNode.cpp  vision_fun_2015.cpp  visionprocessor.cpp
(+118 files in other folders)
