<?xml version="1.0"?>
<package format="2">
  <name>rr_common</name>
  <version>0.0.0</version>
  <description>The rr_common package contains the topic names and service names for the project</description>
  <maintainer email="ooogunma@edu.uwaterloo.ca">Toni Ogunmade(oluwatoni)</maintainer>
  <license>TODO</license>
  <url type="website">http://wiki.ros.org/rr_common</url>
  <author email="ooogunma@edu.uwaterloo.ca">Toni Ogunmade(oluwatoni)</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
