<?xml version="1.0"?>
<package>
  <name>rr_controller</name>
  <version>0.0.0</version>
  <description>The robotracing_controller package</description>
  <maintainer email="alee@todo.todo">alee</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> std_msgs </build_depend> 
  <build_depend> roscpp </build_depend> 
  <build_depend> geometry_msgs </build_depend>
  <build_depend> roslint </build_depend>

  <run_depend> std_msgs </run_depend> 
  <run_depend> roscpp </run_depend>
  <run_depend> geometry_msgs  </run_depend> 
 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

