<?xml version="1.0"?>
<package>
  <name>rr_gazebo</name>
  <version>0.1.0</version>
  <description>
    rr_gazebo is used with Gazebo to simulate a vehicle with
    Ackermann steering.
  </description>
  <maintainer email="ooogunma@edu.uwaterloo.ca">
    Oluwatoni Ogunmade
  </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rr_common</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rr_common</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rr_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
