<?xml version="1.0"?>
<package>
  <name>rr_supervisor</name>
  <version>0.0.0</version>
  <description>The robotracing_supervisor</description>
  <maintainer email="ssong@todo.todo">ssong</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> std_msgs </build_depend> 
  <build_depend> rospy </build_depend> 
  <build_depend> roscpp </build_depend> 
  <build_depend>roslint</build_depend>
  <build_depend>rr_libraries</build_depend>

  <run_depend> std_msgs </run_depend> 
  <run_depend> rospy </run_depend> 
  <run_depend> roscpp </run_depend> 
  
  <export>
	<cpp cflags="-I$(prefix)/include" lflags="-L$(prefix)/lib" />
  </export>
</package>
