<?xml version="1.0"?>
<package>
  <name>rr_vehicle_gazebo</name>
  <version>0.1.0</version>
  <description>
    rr_vehicle_gazebo is used with Gazebo to simulate a vehicle with
    Ackermann steering.
  </description>
  <maintainer email="ooogunma@edu.uwaterloo.ca">
    Oluwatoni Ogunmade
  </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>rr_vehicle_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros_plugins</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
